crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@604.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rp_prefix_test1_p1 partition of rp_prefix_test1 for values from (1, 'a') to (1, 'b');"
---
CreateStmt@0..98
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..31
    Ident@13..31 "rp_prefix_test1_p1"
  Whitespace@31..32 " "
  Partition@32..41 "partition"
  Whitespace@41..42 " "
  Of@42..44 "of"
  Whitespace@44..45 " "
  RangeVar@45..60
    Ident@45..60 "rp_prefix_test1"
  Whitespace@60..61 " "
  For@61..64 "for"
  Whitespace@64..65 " "
  Values@65..71 "values"
  Whitespace@71..72 " "
  PartitionBoundSpec@72..96
    From@72..76 "from"
    Whitespace@76..77 " "
    Ascii40@77..78 "("
    AConst@78..79
      Iconst@78..79 "1"
    Ascii44@79..80 ","
    Whitespace@80..81 " "
    AConst@81..84
      Sconst@81..84 "'a'"
    Ascii41@84..85 ")"
    Whitespace@85..86 " "
    To@86..88 "to"
    Whitespace@88..89 " "
    Ascii40@89..90 "("
    AConst@90..91
      Iconst@90..91 "1"
    Ascii44@91..92 ","
    Whitespace@92..93 " "
    AConst@93..96
      Sconst@93..96 "'b'"
  Ascii41@96..97 ")"
  Ascii59@97..98 ";"

