crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@607.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rp_prefix_test2 (a int, b int, c int) partition by range(a, b, c);"
---
CreateStmt@0..79
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..28
    Ident@13..28 "rp_prefix_test2"
  Whitespace@28..29 " "
  Ascii40@29..30 "("
  ColumnDef@30..35
    Ident@30..31 "a"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ColumnDef@37..42
    Ident@37..38 "b"
    Whitespace@38..39 " "
    TypeName@39..42
      IntP@39..42 "int"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  ColumnDef@44..49
    Ident@44..45 "c"
    Whitespace@45..46 " "
    TypeName@46..49
      IntP@46..49 "int"
  Ascii41@49..50 ")"
  Whitespace@50..51 " "
  PartitionSpec@51..77
    Partition@51..60 "partition"
    Whitespace@60..61 " "
    By@61..63 "by"
    Whitespace@63..64 " "
    Range@64..69 "range"
    Ascii40@69..70 "("
    PartitionElem@70..71
      Ident@70..71 "a"
    Ascii44@71..72 ","
    Whitespace@72..73 " "
    PartitionElem@73..74
      Ident@73..74 "b"
    Ascii44@74..75 ","
    Whitespace@75..76 " "
    PartitionElem@76..77
      Ident@76..77 "c"
  Ascii41@77..78 ")"
  Ascii59@78..79 ";"

