crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@608.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rp_prefix_test2_p1 partition of rp_prefix_test2 for values from (1, 1, 0) to (1, 1, 10);"
---
CreateStmt@0..101
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..31
    Ident@13..31 "rp_prefix_test2_p1"
  Whitespace@31..32 " "
  Partition@32..41 "partition"
  Whitespace@41..42 " "
  Of@42..44 "of"
  Whitespace@44..45 " "
  RangeVar@45..60
    Ident@45..60 "rp_prefix_test2"
  Whitespace@60..61 " "
  For@61..64 "for"
  Whitespace@64..65 " "
  Values@65..71 "values"
  Whitespace@71..72 " "
  PartitionBoundSpec@72..99
    From@72..76 "from"
    Whitespace@76..77 " "
    Ascii40@77..78 "("
    AConst@78..79
      Iconst@78..79 "1"
    Ascii44@79..80 ","
    Whitespace@80..81 " "
    AConst@81..82
      Iconst@81..82 "1"
    Ascii44@82..83 ","
    Whitespace@83..84 " "
    AConst@84..85
      Iconst@84..85 "0"
    Ascii41@85..86 ")"
    Whitespace@86..87 " "
    To@87..89 "to"
    Whitespace@89..90 " "
    Ascii40@90..91 "("
    AConst@91..92
      Iconst@91..92 "1"
    Ascii44@92..93 ","
    Whitespace@93..94 " "
    AConst@94..95
      Iconst@94..95 "1"
    Ascii44@95..96 ","
    Whitespace@96..97 " "
    AConst@97..99
      Iconst@97..99 "10"
  Ascii41@99..100 ")"
  Ascii59@100..101 ";"

