crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@611.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rp_prefix_test3 (a int, b int, c int, d int) partition by range(a, b, c, d);"
---
CreateStmt@0..89
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..28
    Ident@13..28 "rp_prefix_test3"
  Whitespace@28..29 " "
  Ascii40@29..30 "("
  ColumnDef@30..35
    Ident@30..31 "a"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ColumnDef@37..42
    Ident@37..38 "b"
    Whitespace@38..39 " "
    TypeName@39..42
      IntP@39..42 "int"
  Ascii44@42..43 ","
  Whitespace@43..44 " "
  ColumnDef@44..49
    Ident@44..45 "c"
    Whitespace@45..46 " "
    TypeName@46..49
      IntP@46..49 "int"
  Ascii44@49..50 ","
  Whitespace@50..51 " "
  ColumnDef@51..56
    Ident@51..52 "d"
    Whitespace@52..53 " "
    TypeName@53..56
      IntP@53..56 "int"
  Ascii41@56..57 ")"
  Whitespace@57..58 " "
  PartitionSpec@58..87
    Partition@58..67 "partition"
    Whitespace@67..68 " "
    By@68..70 "by"
    Whitespace@70..71 " "
    Range@71..76 "range"
    Ascii40@76..77 "("
    PartitionElem@77..78
      Ident@77..78 "a"
    Ascii44@78..79 ","
    Whitespace@79..80 " "
    PartitionElem@80..81
      Ident@80..81 "b"
    Ascii44@81..82 ","
    Whitespace@82..83 " "
    PartitionElem@83..84
      Ident@83..84 "c"
    Ascii44@84..85 ","
    Whitespace@85..86 " "
    PartitionElem@86..87
      Ident@86..87 "d"
  Ascii41@87..88 ")"
  Ascii59@88..89 ";"

