crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@613.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rp_prefix_test3_p2 partition of rp_prefix_test3 for values from (2, 2, 2, 0) to (2, 2, 2, 10);"
---
CreateStmt@0..107
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..31
    Ident@13..31 "rp_prefix_test3_p2"
  Whitespace@31..32 " "
  Partition@32..41 "partition"
  Whitespace@41..42 " "
  Of@42..44 "of"
  Whitespace@44..45 " "
  RangeVar@45..60
    Ident@45..60 "rp_prefix_test3"
  Whitespace@60..61 " "
  For@61..64 "for"
  Whitespace@64..65 " "
  Values@65..71 "values"
  Whitespace@71..72 " "
  PartitionBoundSpec@72..105
    From@72..76 "from"
    Whitespace@76..77 " "
    Ascii40@77..78 "("
    AConst@78..79
      Iconst@78..79 "2"
    Ascii44@79..80 ","
    Whitespace@80..81 " "
    AConst@81..82
      Iconst@81..82 "2"
    Ascii44@82..83 ","
    Whitespace@83..84 " "
    AConst@84..85
      Iconst@84..85 "2"
    Ascii44@85..86 ","
    Whitespace@86..87 " "
    AConst@87..88
      Iconst@87..88 "0"
    Ascii41@88..89 ")"
    Whitespace@89..90 " "
    To@90..92 "to"
    Whitespace@92..93 " "
    Ascii40@93..94 "("
    AConst@94..95
      Iconst@94..95 "2"
    Ascii44@95..96 ","
    Whitespace@96..97 " "
    AConst@97..98
      Iconst@97..98 "2"
    Ascii44@98..99 ","
    Whitespace@99..100 " "
    AConst@100..101
      Iconst@100..101 "2"
    Ascii44@101..102 ","
    Whitespace@102..103 " "
    AConst@103..105
      Iconst@103..105 "10"
  Ascii41@105..106 ")"
  Ascii59@106..107 ";"

