crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@616.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table hp_prefix_test (a int, b int, c int, d int) partition by hash (a part_test_int4_ops, b part_test_int4_ops, c part_test_int4_ops, d part_test_int4_ops);"
---
CreateStmt@0..164
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..27
    Ident@13..27 "hp_prefix_test"
  Whitespace@27..28 " "
  Ascii40@28..29 "("
  ColumnDef@29..34
    Ident@29..30 "a"
    Whitespace@30..31 " "
    TypeName@31..34
      IntP@31..34 "int"
  Ascii44@34..35 ","
  Whitespace@35..36 " "
  ColumnDef@36..41
    Ident@36..37 "b"
    Whitespace@37..38 " "
    TypeName@38..41
      IntP@38..41 "int"
  Ascii44@41..42 ","
  Whitespace@42..43 " "
  ColumnDef@43..48
    Ident@43..44 "c"
    Whitespace@44..45 " "
    TypeName@45..48
      IntP@45..48 "int"
  Ascii44@48..49 ","
  Whitespace@49..50 " "
  ColumnDef@50..55
    Ident@50..51 "d"
    Whitespace@51..52 " "
    TypeName@52..55
      IntP@52..55 "int"
  Ascii41@55..56 ")"
  Whitespace@56..57 " "
  PartitionSpec@57..162
    Partition@57..66 "partition"
    Whitespace@66..67 " "
    By@67..69 "by"
    Whitespace@69..70 " "
    Ident@70..74 "hash"
    Whitespace@74..75 " "
    Ascii40@75..76 "("
    PartitionElem@76..96
      Ident@76..77 "a"
      Whitespace@77..78 " "
      Ident@78..96 "part_test_int4_ops"
    Ascii44@96..97 ","
    Whitespace@97..98 " "
    PartitionElem@98..118
      Ident@98..99 "b"
      Whitespace@99..100 " "
      Ident@100..118 "part_test_int4_ops"
    Ascii44@118..119 ","
    Whitespace@119..120 " "
    PartitionElem@120..140
      Ident@120..121 "c"
      Whitespace@121..122 " "
      Ident@122..140 "part_test_int4_ops"
    Ascii44@140..141 ","
    Whitespace@141..142 " "
    PartitionElem@142..162
      Ident@142..143 "d"
      Whitespace@143..144 " "
      Ident@144..162 "part_test_int4_ops"
  Ascii41@162..163 ")"
  Ascii59@163..164 ";"

