crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@626.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table hp_contradict_test (a int, b int) partition by hash (a part_test_int4_ops2, b part_test_int4_ops2);"
---
CreateStmt@0..112
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..31
    Ident@13..31 "hp_contradict_test"
  Whitespace@31..32 " "
  Ascii40@32..33 "("
  ColumnDef@33..38
    Ident@33..34 "a"
    Whitespace@34..35 " "
    TypeName@35..38
      IntP@35..38 "int"
  Ascii44@38..39 ","
  Whitespace@39..40 " "
  ColumnDef@40..45
    Ident@40..41 "b"
    Whitespace@41..42 " "
    TypeName@42..45
      IntP@42..45 "int"
  Ascii41@45..46 ")"
  Whitespace@46..47 " "
  PartitionSpec@47..110
    Partition@47..56 "partition"
    Whitespace@56..57 " "
    By@57..59 "by"
    Whitespace@59..60 " "
    Ident@60..64 "hash"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    PartitionElem@66..87
      Ident@66..67 "a"
      Whitespace@67..68 " "
      Ident@68..87 "part_test_int4_ops2"
    Ascii44@87..88 ","
    Whitespace@88..89 " "
    PartitionElem@89..110
      Ident@89..90 "b"
      Whitespace@90..91 " "
      Ident@91..110 "part_test_int4_ops2"
  Ascii41@110..111 ")"
  Ascii59@111..112 ";"

